Device class - picking device works, TODO: create command pool and device

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
 
+set(APP_RENDER_SRC
+    src/render/Device.cpp
+    src/render/PhysicalDevice.cpp)
+
+set(APP_RENDER_HPP
+    include/render/Device.h
+    include/render/PhysicalDevice.h)
+
 set(APP_SRC
     src/Window.cpp
     DemoApp.cpp)
@@ -11,7 +19,7 @@ set(APP_HPP
     DemoApp.h)
 
 
-set(APP_SOURCES ${APP_SRC} ${APP_HPP})
+set(APP_SOURCES ${APP_SRC} ${APP_HPP} ${APP_RENDER_SRC} ${APP_RENDER_HPP})
 
 add_executable(rw_model_viewer main.cpp ${APP_SOURCES})
 target_link_libraries(rw_model_viewer PRIVATE glfw glm spdlog vulkan imgui)
