--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,10 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 
 set(APP_RENDER_SRC
+    src/render/Buffer.cpp
+    src/render/SwapChain.cpp
+    src/render/Instance.cpp
     src/render/Device.cpp
     src/render/PhysicalDevice.cpp)
 
 set(APP_RENDER_HPP
+    include/render/Buffer.h
+    include/render/SwapChain.h
+    include/render/Instance.h
     include/render/Device.h
     include/render/PhysicalDevice.h)
 
@@ -22,6 +28,6 @@ set(APP_HPP
 set(APP_SOURCES ${APP_SRC} ${APP_HPP} ${APP_RENDER_SRC} ${APP_RENDER_HPP})
 
 add_executable(rw_model_viewer main.cpp ${APP_SOURCES})
-target_link_libraries(rw_model_viewer PRIVATE glfw glm spdlog vulkan imgui)
+target_link_libraries(rw_model_viewer PRIVATE glfw glm spdlog Vulkan::Vulkan imgui)
 target_include_directories(rw_model_viewer PRIVATE include)
 target_compile_definitions(rw_model_viewer PRIVATE -DLOGGER_ENABLED)
